# policy-reasoner

./: ARCHITECTURE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: audit.yml  ci-nightly.yml  ci.yml  docs.yml  mixin-cargo-build.yml  mixin-cargo-test.yml
examples/: eflint.rs  eflint_haskell.rs  eflint_json.rs  no_op.rs  posix.rs
lib/audit-logger/: Cargo.toml
lib/audit-logger/src/: lib.rs
lib/auth-resolver/: Cargo.toml
lib/auth-resolver/src/: lib.rs
lib/deliberation/: Cargo.toml
lib/eflint-spec/: Cargo.toml
lib/eflint-spec/src/: lib.rs
lib/eflint-to-json/: Cargo.toml
lib/eflint-to-json/src/: download.rs  lib.rs
lib/loggers/file/: Cargo.toml
lib/loggers/file/src/: logger.rs
lib/loggers/no-op/: Cargo.toml
lib/loggers/no-op/src/: logger.rs
lib/nested-cli-parser/: Cargo.toml
lib/nested-cli-parser/src/: spec.rs
lib/policy/: Cargo.toml
lib/reasonerconn/: Cargo.toml
lib/reasoners/eflint-haskell/: Cargo.toml
lib/reasoners/eflint-haskell/src/: hash.rs  lib.rs  reasonerconn.rs  reasonertrace.rs  reasons.rs  spec.rs  trace.rs
lib/reasoners/eflint-haskell/tests/: traces.rs
lib/reasoners/eflint-haskell/tests/traces/: 03_derive_chain.same0  04_suppress_derive.same0  05_suppress_create.same0  06_trigger.same0  07_create_terminate.same0  08_create_seq.same0  09_create_terminate_seq.same0  10_create_obfuscate.same0  11_complex_facts.same0  12_trig_act.same0  13_sync.same0  14_deriv_chain.same0  14_deriv_chain.same1  14_deriv_chain.same2  15_sync_chain.same0  15_sync_chain.same1  16_act_viol.same0  17_not_enabled_act.same0  18_duty.same0  19_naf.same0  20_agg.same0  21_aggs.same0  22_forall_exists.same0  23_duty_derived.same1  23_duty_derived.same2  access_union.same1  access_union.same2  bench_between.perf1  bench_between.perf2  bench_between.perf3  bench_between.perf4  bench_between.perf5  bench_between.perf6  bench_between.perf7  bench_derive.perf2  bench_derive.perf3  bench_derive.perf4  bench_derive.perf5  bench_derive.perf6  bench_derive.perf7  (+17 more)
lib/reasoners/eflint-json/: Cargo.toml
lib/reasoners/eflint-json/src/: reasonerconn.rs  reasons.rs  spec.rs
lib/reasoners/no-op/: Cargo.toml
lib/reasoners/no-op/src/: reasonerconn.rs
lib/reasoners/posix/: Cargo.toml  README.md  architecture.md
lib/reasoners/posix/src/: config.rs  lib.rs  reasonerconn.rs  workflow.rs
lib/resolvers/file/: Cargo.toml
lib/resolvers/file/src/: resolver.rs
lib/share/: Cargo.toml
lib/share/src/: formatters.rs  lib.rs
lib/spec/: Cargo.toml
lib/spec/src/: auditlogger.rs  lib.rs  reasonerconn.rs  reasons.rs  stateresolver.rs
lib/srv/: Cargo.toml
lib/srv/src/: deliberation.rs  lib.rs  policy.rs  problem.rs
lib/state-resolver/: Cargo.toml
lib/workflow/: Cargo.toml
lib/workflow/src/: eflint.rs  lib.rs  optimize.rs  preprocess.rs  visitor.rs  visualize.rs
src/: lib.rs  state.rs
tools/checker-client/: Cargo.toml
tools/checker-client/src/: main.rs
tools/key-manager/: Cargo.toml
tools/policy-builder/: Cargo.toml
tools/policy-builder/src/: main.rs
