[package]
name = "auth-resolver"
rust-version = "1.81"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
serde = { version = "1.0.204", features = ["derive"] }
http = "1.0.0"
# axum = "0.8.0"
