[package]
name = "eflint-to-json"
description = "Defines a high-level wrapper around Olaf's [`eflint-to-json`](https://github.com/Olaf-Erkemeij/eflint-server) executable that compiles eFLINT to eFLINT JSON Specification."
rust-version = "1.81"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
async-recursion = "1.0"
console = "0.15.5"
futures-util = "0.3.30"
hex = "0.4.3"
hex-literal = "0.4"
indicatif = "0.17"
log = "0.4.22"
sha2 = "0.10.6"
tokio = { version = "1.38.0", default-features = false, features = ["fs", "process"]}
reqwest = { workspace = true, features = ["blocking", "stream", "rustls-tls-webpki-roots"] }

[dev-dependencies]
# Workspace dependencies
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
