[package]
name = "srv"
rust-version = "1.81"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates.io
axum = { version = "0.8.3", features = ["macros"] }
chrono = "0.4.35"
http = "1.1.0"
log = "0.4.22"
problem_details = "0.8.0"
serde = { version="1.0.204", features=["derive"] }
serde_json = {version = "1.0.120" , features = ["raw_value"] }
tracing = "0.1.0"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version="1.7.0", features = ["v4"] }
warp = "0.3"

# Path
audit-logger = { path = "../audit-logger" }
auth-resolver = { path = "../auth-resolver" }
deliberation = { path = "../deliberation" }
policy = { path = "../policy" }
reasonerconn = {path = "../reasonerconn"}
state-resolver = { path = "../state-resolver" }
workflow = { path = "../workflow" }

# Workspace dependencies
error-trace.workspace = true

# Brane
brane-ast = { git = "https://github.com/braneframework/brane" }
brane-exe = { git = "https://github.com/braneframework/brane" }
