[package]
name = "workflow"
description = "Defines the workflow representation used internally by the checker."
rust-version = "1.75.0"
edition = "2021"
authors = [ "Tim Müller" ]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
serde = { version = "1.0.204", features = ["derive"], optional = true }

enum-debug.workspace = true


[features]
default = ["visualize"]

serde = ["dep:serde"]
visualize = []
