[package]
name = "file-logger"
description = "Implements an audit logger that writes everything to a file."
edition = "2021"
rust-version = "1.75.0"
authors = [ "Bas Kloosterman", "Tim Müller" ]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
chrono = "0.4.35"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.44.2", default-features = false, features = ["fs", "io-util"] }
tracing = "0.1.40"

enum-debug.workspace = true

spec = { path = "../../spec", package = "specifications" }


[features]
default = []
