[package]
name = "no-op-logger"
description = "Implements an audit logger that doesn't audit log anything but just logs a little using `tracing`."
edition = "2021"
rust-version = "1.78.0"
authors = [ "Bas Kloosterman", "Tim Müller" ]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
serde = "1.0.184"
tracing = "0.1.37"

spec = { path = "../../spec", package = "specifications" }


[features]
default = []
