[package]
name = "eflint-haskell-reasoner"
description = "Wraps the infamous Haskell interpreter to supply an eFLINT DSL backend."
edition = "2021"
rust-version = "1.75.0"
authors = [ "Tim Müller" ]
version = "0.1.0"
repository.workspace = true
license.workspace = true


[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "2.0.12"
tokio = { version = "1.44.2", default-features = false, features = ["io-util", "process"] }
tracing = "0.1.40"

error-trace.workspace = true

spec = { path = "../../spec", package = "specifications" }


[features]
default = []
