[package]
name = "eflint-json-reasoner"
description = "Implements eFLINT as a backend reasoner for the policy reasoner."
edition = "2021"
rust-version = "1.75.0"
authors = [ "Bas Kloosterman", "Tim Müller" ]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tracing = "0.1.40"

eflint-json.workspace = true
error-trace.workspace = true

spec = { path = "../../spec", package = "specifications" }


[features]
default = []
