[package]
name = "eflint-json-reasoner"
description = "Implements eFLINT as a backend reasoner for the policy reasoner."
edition = "2021"
rust-version = "1.81.0"
authors = [ "Bas Kloosterman", "Tim Müller" ]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.29"
thiserror = "2.0.0"
tracing = "0.1.37"

eflint-json.workspace = true
error-trace.workspace = true

spec = { path = "../../spec", package = "specifications" }

share = { path = "../../share" }

[features]
default = []
