[package]
name = "posix-reasoner"
description = "A policy reasoner implementation using posix file system permissions"
edition = "2021"
rust-version = "1.80.1"
authors = [
    "Daniel Voogsgerd",
    "Haraldur Davíðsson",
    "Simon Noorts",
    "Tim Müller",
]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.29"
thiserror = "2.0.0"
tokio = { version = "1.44.2", default-features = false, features = [
    "fs",
    "io-util",
] }
tracing = "0.1.37"

error-trace.workspace = true

spec = { path = "../../spec", package = "specifications" }
workflow = { path = "../../workflow", features = ["serde"] }


[features]
default = []
