[package]
name = "file-resolver"
description = "Resolves state from a file by parsing it as `serde` JSON."
edition = "2021"
rust-version = "1.78.0"
authors = [ "Bas Kloosterman", "Tim Müller" ]
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.29"
thiserror = "2.0.0"
tokio = { version = "1.44.2", default-features = false, features = ["fs"] }
tracing = "0.1.37"

spec = { path = "../../spec", package = "specifications" }


[features]
default = []
